stop using vh because it breaks on mobile

--- a/index.css
+++ b/index.css
@@ -12,13 +12,19 @@
 	-webkit-font-smoothing: antialiased;
 }
 
+html,
+body {
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+}
+
 body {
 	padding: 10px 32px;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 	font-family: "Titan One";
 	line-height: 1.5;
 	color: #000000;
-	height: 100vh;
 	background-color: #FFDC00;
 	display: flex;
 	flex-direction: column;
